--- a/references.bib
+++ b/references.bib
@@ -269,6 +269,15 @@ doi = {10.1177/0956797609357751}
   publisher={American Psychological Association}
 }
 
+@article{patil2016statistical,
+  title={A statistical definition for reproducibility and replicability},
+  author={Patil, Prasad and Peng, Roger D and Leek, Jeffrey T},
+  journal={BioRxiv},
+  pages={066803},
+  year={2016},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @book{kenny2006dyadic,
   title={Dyadic data analysis},
   author={Kenny, David A and Kashy, Deborah A and Cook, William L},
@@ -332,6 +341,7 @@ doi = {10.1177/0956797609357751}
 
 @article{swimetal, title={Everyday Sexism: Evidence for Its Incidence, Nature, and Psychological Impact From Three Daily Diary Studies}, volume={57}, DOI={10.1111/0022-4537.00200}, number={1}, journal={Journal of Social Issues}, author={Swim, Janet K. and Hyers, Lauri L. and Cohen, Laurie L. and Ferguson, Melissa J.}, year={2001}, pages={31–53}}
 @article{Bartky, title = {Femininity and Domination Studies in the Phenomenology of Oppression},year = {1990},author = {Sandra Lee Bartky}}
+
 @article{loughnan2015,
   title={Exploring the role of culture in sexual objectification: A seven nations study},
   author={Loughnan, Steve and Fernandez-Campos, Silvia and Vaes, Jeroen and Anjum, Gulnaz and Aziz, Mudassar and Harada, Chika and Holland, Elise and Singh, Indramani and Puvia, Elisa and Tsuchiya, Koji},
@@ -340,7 +350,19 @@ doi = {10.1177/0956797609357751}
   number={1},
   pages={125--152},
   year={2015},
-  publisher={Presses universitaires de Grenoble}}
+  publisher={Presses universitaires de Grenoble}
+}
+  
+@article{loughnan2017internalizing,
+  title={Internalizing objectification: Objectified individuals see themselves as less warm, competent, moral, and human},
+  author={Loughnan, Steve and Baldissarri, Cristina and Spaccatini, Federica and Elder, Laura},
+  journal={British Journal of Social Psychology},
+  volume={56},
+  number={2},
+  pages={217--232},
+  year={2017},
+  publisher={Wiley Online Library}
+}
 
 @article{moradi2008,
   title={Objectification theory and psychology of women: A decade of advances and future directions},
